# visual-bug-hunter

./: .gitignore  BUG_RULES.md  LICENSE  README.md  README_CN.md  SKILL.md  agent_instructions.md  pyproject.toml  visual_bug_hunter.py
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml
src/adapters/: mcp_server.py
src/core/: analyzer.py  locator.py
visual_bug_hunter/: __init__.py  analyzer.py  cli.py  locator.py  reporter.py  utils.py
visual_bug_hunter.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
